--- a/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YukioUgajin</title>
+    <title>challenge3-yukio-ugajin</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
