add chart-1.js & chart-2.js to javascript/packs

--- a/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
@@ -4,12 +4,11 @@
     <title>challenge3-yukio-ugajin</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <%= yield %>
   </body>
 </html>
