--- a/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
@@ -1,3 +1,5 @@
 <h1>EnergyDataSimulation-challenge3 yukio-ugajin</h1>
 <canvas id="myChart1"></canvas>
 <canvas id="myChart2"></canvas>
+<%= javascript_pack_tag 'chart-1', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'chart-2', 'data-turbolinks-track': 'reload' %>
