--- a/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <%= yield %>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
