add select tag and change all.json.jbuilder

--- a/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
@@ -1,4 +1,11 @@
-<h1>EnergyDataSimulation-challenge3 yukio-ugajin</h1>
+<h1>EnergyDataSimulation-challenge3</h1>
+<h3>select data to show graph：
+<select name="blood">
+<option value="A">All</option>
+<option value="B">City</option>
+<option value="O">Num_of_people</option>
+<option value="AB">Has_child</option>
+</select></h3>
 <canvas id="myChart1"></canvas>
 <canvas id="myChart2"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
