--- a/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
@@ -1,10 +1,10 @@
 <h1>EnergyDataSimulation-challenge3</h1>
 <h3>select data to show graph：
-<select name="blood">
-<option value="A">All</option>
-<option value="B">City</option>
-<option value="O">Num_of_people</option>
-<option value="AB">Has_child</option>
+<select id='select_box'>
+<option value="all">All</option>
+<option value="city">City</option>
+<option value="num_of_people">Num_of_people</option>
+<option value="has_child">Has_child</option>
 </select></h3>
 <canvas id="myChart1"></canvas>
 <canvas id="myChart2"></canvas>
