--- a/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
@@ -9,5 +9,4 @@
 <canvas id="myChart1"></canvas>
 <canvas id="myChart2"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<%= javascript_pack_tag 'chart-1', 'data-turbolinks-track': 'reload' %>
-<%= javascript_pack_tag 'chart-2', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'chart', 'data-turbolinks-track': 'reload' %>
