--- a/challenge3/webapp/yukio_ugajin/app/assets/stylesheets/static_pages.scss
+++ b/challenge3/webapp/yukio_ugajin/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the static_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+#select_box {
+  width: 200px;
+  height: 50px;
+  font-size: 18px;
+}
+
+#myChart1 {
+  max-width: 700px;
+  margin: 50px auto;
+}
+
+#myChart2 {
+  max-width: 700px;
+  margin: 0 auto;
+}
