--- a/challenge3/webapp/yukio_ugajin/app/assets/stylesheets/static_pages.scss
+++ b/challenge3/webapp/yukio_ugajin/app/assets/stylesheets/static_pages.scss
@@ -7,10 +7,15 @@
 
 #myChart1 {
   max-width: 700px;
-  margin: 50px auto;
+  margin: 0 auto;
 }
 
 #myChart2 {
   max-width: 700px;
   margin: 0 auto;
+}
+
+.title {
+  margin-top: 60px;
+  text-align: center;
 }
