--- a/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
+++ b/challenge3/webapp/yukio_ugajin/app/views/static_pages/top.html.erb
@@ -1,12 +1,15 @@
 <h1>EnergyDataSimulation-challenge3</h1>
-<h3>select data to show graph：
+<h3>select data ：
 <select id='select_box'>
 <option value="all">All</option>
 <option value="city">City</option>
 <option value="num_of_people">Num_of_people</option>
 <option value="has_child">Has_child</option>
 </select></h3>
+
+<h3 class='title'>Scatter Graph to show all production for each data</h3>
 <canvas id="myChart1"></canvas>
+<h3 class='title'>Circle Graph to show ratio for each data</h3>
 <canvas id="myChart2"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <%= javascript_pack_tag 'chart', 'data-turbolinks-track': 'reload' %>
