--- a/challenge3/webapp/keita_eguchi/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/keita_eguchi/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= include_gon %>
+    <%= javascript_include_tag "application" %>
   </head>
 
   <body>
