--- a/challenge3/webapp/takuya_kikuchi/app/views/pages/main.html.erb
+++ b/challenge3/webapp/takuya_kikuchi/app/views/pages/main.html.erb
@@ -1,4 +1,17 @@
 <h1>House energy production chart</h1>
+<p>Please select a house</p>
+<select class='house'>
+  <% @houses.each_with_index do |house, i| %>
+    <option value= <%= (i+1) %>>
+      <%= house.id %> - 
+      <%= house.first_name.capitalize %>
+      <%= house.last_name.capitalize %>
+      (<%= house.city.capitalize %>)
+    </option>
+  <% end %>
+</select>
+
+<div class="result">on change</div>
 
 <canvas id="myChart"></canvas>
 
