--- a/challenge3/webapp/yoshikawa_keishi/app/views/houses/index.html.erb
+++ b/challenge3/webapp/yoshikawa_keishi/app/views/houses/index.html.erb
@@ -1,16 +1,21 @@
-
-<%= column_chart @city_energy_production,
+<section>
+  <h2 class="section-title">Each City's Total Production<h2>
+  <%= column_chart @city_energy_production,
                  height: '600px',
                  ytitle: "Total_Energy_Production",
                  colors: ['#79817B']  %>
-
-<%= scatter_chart @data,
-                 height: '600px',
-                 xtitle: "Daylight", 
-                 ytitle: "Energy_Production",
-                 colors: ['#79817B'] %>
-
+</section>
+<section>
+  <h2 class="section-title">Correrlation of daylight and energy production<h2>
+  <%= scatter_chart @data,
+                  height: '600px',
+                  xtitle: "Daylight", 
+                  ytitle: "Energy_Production",
+                  colors: ['#79817B'] %>
+</section>
 <table class="table table-hover">
+  <h2 class="section-title">All houses data<h2>
+  <p class="warning"> ※click the name you want </p>
   <thead>
     <tr>
       <th>ID</th>
