--- a/challenge3/webapp/yoshikawa_keishi/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yoshikawa_keishi/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
     <title>YoshikawaKeishi</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
