made naming better

--- a/challenge3/webapp/yoshikawa_keishi/app/views/houses/index.html.erb
+++ b/challenge3/webapp/yoshikawa_keishi/app/views/houses/index.html.erb
@@ -7,7 +7,7 @@
 </section>
 <section>
   <h2 class="section-title">Correrlation of daylight and energy production<h2>
-  <%= scatter_chart @data,
+  <%= scatter_chart @daylight_energy_data,
                   height: '600px',
                   xtitle: "Daylight", 
                   ytitle: "Energy_Production",
