--- a/challenge3/webapp/yoshikawa_keishi/app/views/houses/show.html.erb
+++ b/challenge3/webapp/yoshikawa_keishi/app/views/houses/show.html.erb
@@ -23,7 +23,7 @@
   </table>
 
   <section>
-    <h2 class="section-title">Monthly data<h2>
+    <h2 class="section-title">Monthly Data<h2>
     <p class="warning"> ※click the data you want </p>
     <%= line_chart @house_monthly_data %>
   </section>
