DB設定変更,view/controller作成

--- a/challenge3/webapp/shimizu/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/shimizu/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Challenge 3 - EnergyDataSimulationChallenge</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= include_gon %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-
   <body>
     <%= yield %>
   </body>
