--- a/challenge3/webapp/shimizu/app/views/houses/show.html.erb
+++ b/challenge3/webapp/shimizu/app/views/houses/show.html.erb
@@ -1,3 +1,4 @@
+<%= provide :title, "#{@house.first_name}'s house" %>
 <div class="container">
   <h1 class="title">Energy Data Simulation Challenge3</h1>
   <hr>
