--- a/challenge3/webapp/shimizu/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/shimizu/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Challenge 3 - EnergyDataSimulationChallenge</title>
+    <title><%= yield(:title) %> - Challenge 3</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
