--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -15,3 +15,4 @@ table.table.table-striped
         | has_child
   tbody
     = render partial: 'houses/house', collection: @houses, as: :house
+= paginate @houses
