--- a/challenge3/webapp/kumaki/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/kumaki/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      | Kumaki
+      | Challenge 3 - Web Application
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
