--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -1,4 +1,9 @@
-= line_chart @data_for_chart
+h5 Temperature
+= line_chart data_of_temperature(@datasets)
+h5 Daylight
+= line_chart data_of_daylight(@datasets)
+h5 EnergyProduction
+= line_chart data_of_energey_production(@datasets)
 table.table.table-striped
   thead
     tr
