--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -1,9 +1,10 @@
-h5 Temperature
+h4.dataset-heading Temperature
 = line_chart data_of_temperature(@datasets), colors: ["#B00", "#666"]
-h5 Daylight
+h4.dataset-heading Daylight
 = line_chart data_of_daylight(@datasets), colors: ["#E90", "#666"]
-h5 EnergyProduction
+h4.dataset-heading EnergyProduction
 = line_chart data_of_energey_production(@datasets), colors: ["#00B", "#666"]
+h4.dataset-heading datasets
 table.table.table-striped
   thead
     tr
