remove 'date' method on dataset model

--- a/challenge3/webapp/kumaki/app/views/datasets/_dataset.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/_dataset.html.slim
@@ -6,9 +6,9 @@ tr
   td
     = dataset.house_id
   td
-    = dataset.year
+    = dataset.year_month.year
   td
-    = dataset.month
+    = dataset.year_month.month
   td
     = dataset.temperature
   td
