link_to house in datasets page

--- a/challenge3/webapp/kumaki/app/views/datasets/_dataset.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/_dataset.html.slim
@@ -4,7 +4,8 @@ tr
   td
     = dataset.label
   td
-    = dataset.house_id
+    = link_to dataset.house do
+      = dataset.house_id
   td
     = dataset.year_month.year
   td
