--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -1,3 +1,7 @@
+h4.dataset-heading Temperature-Daylight
+= scatter_chart data_of_daylight_with_temperature(@datasets), xtitle: "Temperature", ytitle: "Daylight"
+h4.dataset-heading Temperature-Daylight
+= scatter_chart data_of_energy_production_with_daylight(@datasets), xtitle: "Daylight", ytitle: "EnergyProduction"
 h4.dataset-heading Temperature
 = line_chart data_of_temperature(@datasets), colors: ["#B00", "#666"]
 h4.dataset-heading Daylight
