method 'convert_yes_or_no'
to suppress rendering cost of '_has_child.html.slim'

--- a/challenge3/webapp/kumaki/app/views/houses/_house.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/_house.html.slim
@@ -11,4 +11,4 @@ tr
   td
     = house.num_of_people
   td
-    = render 'houses/has_child', has_child: house.has_child
+    = convert_yes_or_no house.has_child
