--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -6,11 +6,11 @@
     h4.dataset-heading Daylight-EnergyProduciton
     = scatter_chart data_of_energy_production_with_daylight(@datasets), xtitle: "Daylight", ytitle: "EnergyProduction"
 h4.dataset-heading Temperature
-= line_chart data_of_temperature(@datasets), colors: ["#B00", "#666"]
+= line_chart data_of_temperature_with_time(@datasets), colors: ["#B00", "#666"]
 h4.dataset-heading Daylight
-= line_chart data_of_daylight(@datasets), colors: ["#E90", "#666"]
+= line_chart data_of_daylight_with_time(@datasets), colors: ["#E90", "#666"]
 h4.dataset-heading EnergyProduction
-= line_chart data_of_energey_production(@datasets), colors: ["#00B", "#666"]
+= line_chart data_of_energey_production_with_time(@datasets), colors: ["#00B", "#666"]
 h4.dataset-heading datasets
 table.table.table-striped
   thead
