average chart in datasets page

--- a/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
@@ -1,3 +1,21 @@
+.row
+  .col-6
+    h4.dataset-heading Temperature(Average)
+    = line_chart data_of_temperature_with_time(@datasets_group_by_time), colors: ["#B00", "#666"], height: "200px"
+  .col-6
+    h4.dataset-heading Daylight(Average)
+    = line_chart data_of_daylight_with_time(@datasets_group_by_time), colors: ["#0B0", "#666"], height: "200px"
+  .col-6
+    h4.dataset-heading EnergyProduction(Average)
+    = line_chart data_of_energey_production_with_time(@datasets_group_by_time), colors: ["#00B", "#666"], height: "200px"
+  .col-6
+  .col-6
+    h4.dataset-heading Temperature-Daylight
+    = scatter_chart data_of_daylight_with_temperature(@datasets), xtitle: "Temperature", ytitle: "Daylight", xmin: 0, colors: ["#BB0", "#666"]
+  .col-6
+    h4.dataset-heading Daylight-EnergyProduciton
+    = scatter_chart data_of_energy_production_with_daylight(@datasets), xtitle: "Daylight", ytitle: "EnergyProduction", xmin: 0, colors: ["#0BB", "#666"]
+h4.dataset-heading datasets
 table.table.table-striped
   thead
     tr
@@ -18,6 +36,5 @@ table.table.table-striped
       th scope="col"
         | EnergyProduction
   tbody
-    = render partial: 'datasets/dataset', collection: @datasets, as: :dataset
-
-= paginate @datasets
+    = render partial: 'datasets/dataset', collection: @datasets_for_pagination, as: :dataset
+= paginate @datasets_for_pagination
