--- a/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
@@ -15,26 +15,4 @@
   .col-6
     h4.dataset-heading Daylight-EnergyProduciton
     = scatter_chart data_of_energy_production_with_daylight(@datasets), xtitle: "Daylight", ytitle: "EnergyProduction", xmin: 0, colors: ["#0BB", "#666"]
-h4.dataset-heading datasets
-table.table.table-striped
-  thead
-    tr
-      th scope="col"
-        | ID
-      th scope="col"
-        | Label
-      th scope="col"
-        | House
-      th scope="col"
-        | Year
-      th scope="col"
-        | Month
-      th scope="col"
-        | Temperature
-      th scope="col"
-        | Daylight
-      th scope="col"
-        | EnergyProduction
-  tbody
-    = render partial: 'datasets/dataset', collection: @datasets_for_pagination, as: :dataset
-= paginate @datasets_for_pagination
+= render 'datasets/datasets_table', datasets: @datasets_for_pagination
