--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -8,8 +8,26 @@
     = line_chart data_of_daylight_with_time(@datasets), colors: ["#0B0", "#666"], height: "200px"
   .col-6
     h4.dataset-heading EnergyProduction
-    = line_chart data_of_energey_production_with_time(@datasets), colors: ["#00B", "#666"], height: "200px"
+    = line_chart data_of_energy_production_with_time(@datasets), colors: ["#00B", "#666"], height: "200px"
   .col-6
+    h4.dataset-heading Average
+    table.table.table-striped
+      thead
+        tr
+          th scope="col"
+            | Temperature
+          th scope="col"
+            | Daylight
+          th scope="col"
+            | EnergyProduciton
+      tbody
+        tr
+          th scope="row"
+            = @average_dataset.temperature
+          th
+            = @average_dataset.daylight
+          th
+            = @average_dataset.energy_production
   .col-6
     h4.dataset-heading Temperature-Daylight
     = scatter_chart data_of_daylight_with_temperature(@datasets), xtitle: "Temperature", ytitle: "Daylight", xmin: 0, colors: ["#BB0", "#666"]
