--- a/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
@@ -7,8 +7,9 @@
     = line_chart data_of_daylight_with_time(@datasets_group_by_time), colors: ["#0B0", "#666"], height: "200px"
   .col-6
     h4.dataset-heading EnergyProduction(Average)
-    = line_chart data_of_energey_production_with_time(@datasets_group_by_time), colors: ["#00B", "#666"], height: "200px"
+    = line_chart data_of_energy_production_with_time(@datasets_group_by_time), colors: ["#00B", "#666"], height: "200px"
   .col-6
+    = render 'datasets/average', average_dataset: @average_dataset
   .col-6
     h4.dataset-heading Temperature-Daylight
     = scatter_chart data_of_daylight_with_temperature(@datasets), xtitle: "Temperature", ytitle: "Daylight", xmin: 0, colors: ["#BB0", "#666"]
