refactor city table

--- a/challenge3/webapp/kumaki/app/views/cities/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/index.html.slim
@@ -1,9 +1,1 @@
-table.table.table-striped
-  thead
-    tr
-      th scope="col"
-        | ID
-      th scope="col"
-        | city
-  tbody
-    = render partial: 'cities/city', collection: @cities, as: :city
+= render 'cities/cities_table', cities: @cities
