add link to city_path

--- a/challenge3/webapp/kumaki/app/views/cities/_city.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/_city.html.slim
@@ -1,5 +1,7 @@
 tr
   th scope="row"
-    = city.id
+    = link_to city do
+      = city.id
   td
-    = city.name
+    = link_to city do
+      = city.name
