--- a/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
@@ -1,13 +1,10 @@
 .row
   .col-6
-    h4.dataset-heading Temperature(Average)
-    = line_chart data_of_temperature_with_time(@datasets_group_by_time), colors: ["#B00", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_temperature_with_time', datasets: @datasets_group_by_time
   .col-6
-    h4.dataset-heading Daylight(Average)
-    = line_chart data_of_daylight_with_time(@datasets_group_by_time), colors: ["#0B0", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_daylight_with_time', datasets: @datasets_group_by_time
   .col-6
-    h4.dataset-heading EnergyProduction(Average)
-    = line_chart data_of_energy_production_with_time(@datasets_group_by_time), colors: ["#00B", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_energy_production_with_time', datasets: @datasets_group_by_time
   .col-6
     = render 'datasets/average', average_dataset: @average_dataset
   .col-6
