--- a/challenge3/webapp/kumaki/app/views/houses/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/show.html.slim
@@ -1,14 +1,11 @@
 = render 'houses/houses_table', houses: @houses
 .row
   .col-6
-    h4.dataset-heading Temperature
-    = line_chart data_of_temperature_with_time(@datasets), colors: ["#B00", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_temperature_with_time', datasets: @datasets
   .col-6
-    h4.dataset-heading Daylight
-    = line_chart data_of_daylight_with_time(@datasets), colors: ["#0B0", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_daylight_with_time', datasets: @datasets
   .col-6
-    h4.dataset-heading EnergyProduction
-    = line_chart data_of_energy_production_with_time(@datasets), colors: ["#00B", "#666"], height: "200px"
+    = render 'datasets/line_chart_of_energy_production_with_time', datasets: @datasets
   .col-6
     = render 'datasets/average', average_dataset: @average_dataset
   .col-6
