--- a/challenge3/webapp/kumaki/app/views/cities/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/show.html.slim
@@ -1,1 +1,8 @@
 = render 'cities/cities_table', cities: @cities
+.row
+  .col-6
+    = render 'datasets/line_chart_of_temperature_with_time', datasets: @datasets
+  .col-6
+    = render 'datasets/line_chart_of_daylight_with_time', datasets: @datasets
+  .col-6
+    = render 'datasets/line_chart_of_energy_production_with_time', datasets: @datasets
