add average datasets table to cities#show page

--- a/challenge3/webapp/kumaki/app/views/cities/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/show.html.slim
@@ -6,3 +6,5 @@
     = render 'datasets/line_chart_of_daylight_with_time', datasets: @datasets
   .col-6
     = render 'datasets/line_chart_of_energy_production_with_time', datasets: @datasets
+  .col-6
+    = render 'datasets/average', average_dataset: @average_dataset
