--- a/challenge3/webapp/kumaki/app/views/cities/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/show.html.slim
@@ -12,4 +12,4 @@
     = render 'datasets/scatter_chart_of_daylight_with_temperature', datasets: @datasets
   .col-6
     = render 'datasets/scatter_chart_of_energy_production_with_daylight', datasets: @datasets
-= render 'datasets/datasets_table', datasets: @datasets
+= render 'datasets/datasets_table', datasets: @datasets_for_pagination
