--- a/challenge3/webapp/kumaki/app/views/shared/_sidebar.html.slim
+++ b/challenge3/webapp/kumaki/app/views/shared/_sidebar.html.slim
@@ -1,11 +1,11 @@
 nav.pt-3
   ul.nav.nav-pills.flex-column
     li.nav-item
-      = link_to datasets_path, class: "nav-link #{'active' if controller.controller_name == 'datasets' && controller.action_name == 'index'}" do
+      = link_to datasets_path, class: "nav-link #{'active' if controller.controller_name == 'datasets'}" do
         | datasets
     li.nav-item
-      = link_to houses_path, class: "nav-link #{'active' if controller.controller_name == 'houses' && controller.action_name == 'index'}" do
+      = link_to houses_path, class: "nav-link #{'active' if controller.controller_name == 'houses'}" do
         | houses
     li.nav-item
-      = link_to cities_path, class: "nav-link #{'active' if controller.controller_name == 'cities' && controller.action_name == 'index'}" do
+      = link_to cities_path, class: "nav-link #{'active' if controller.controller_name == 'cities'}" do
         | cities
