pie_chart of city count

--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -1,1 +1,2 @@
-= render 'houses/houses_table', houses: @houses
+= pie_chart @houses
+= render 'houses/houses_table', houses: @houses_for_pagination
