--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -1,2 +1,17 @@
 = pie_chart @count_city
+h4.dataset-heading Count
+table.table.table-striped
+  thead
+    tr
+      th scope="col"
+        | City
+      th scope="col"
+        | Count
+  tbody
+    - @count_city.each do |key, value|
+      tr
+        th scope="row"
+          = key
+        th
+          = value
 = render 'houses/houses_table', houses: @houses_for_pagination
