create column chart and table of num_of_people

--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -2,5 +2,6 @@
   .col-4
     = render 'cities/count', count_city: @count_city
   .col-4
+    = render 'houses/num_of_people', num_of_people: @num_of_people
   .col-4
 = render 'houses/houses_table', houses: @houses_for_pagination
