--- a/challenge3/webapp/kumaki/app/views/cities/_count.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/_count.html.slim
@@ -1,7 +1,6 @@
 h4.dataset-heading City
 = pie_chart count_city
-h4.dataset-heading Count
-table.table.table-striped
+table.table.table-striped.mt-5
   thead
     tr
       th scope="col"
