--- a/challenge3/webapp/kumaki/app/views/houses/_num_of_people.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/_num_of_people.html.slim
@@ -1,11 +1,10 @@
 h4.dataset-heading num_of_people
 = column_chart num_of_people
-h4.dataset-heading Count
-table.table.table-striped
+table.table.table-striped.mt-5
   thead
     tr
       th scope="col"
-        | City
+        | num_of_people
       th scope="col"
         | Count
   tbody
