add num_of_people, has_child charts to cities#show

--- a/challenge3/webapp/kumaki/app/views/cities/show.html.slim
+++ b/challenge3/webapp/kumaki/app/views/cities/show.html.slim
@@ -1,6 +1,10 @@
 = render 'cities/cities_table', cities: @cities
 .row
   .col-6
+    = render 'houses/count_num_of_people', count_num_of_people: @count_num_of_people
+  .col-6
+    = render 'houses/count_has_child', count_has_child: data_of_has_child_with_count(@count_has_child)
+  .col-6
     = render 'datasets/line_chart_of_temperature_with_time', datasets: @datasets_group_by_time
   .col-6
     = render 'datasets/line_chart_of_daylight_with_time', datasets: @datasets_group_by_time
