--- a/challenge3/webapp/kumaki/app/views/houses/_count_num_of_people.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/_count_num_of_people.html.slim
@@ -27,4 +27,4 @@ table.table.table-striped.mt-5
       th scope="row"
         | Average
       th
-        = sum.to_f / count
+        = (sum.to_f / count).round(1)
