--- a/challenge3/webapp/kumaki/app/views/houses/_count_num_of_people.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/_count_num_of_people.html.slim
@@ -1,5 +1,5 @@
 h4.dataset-heading num_of_people
-= column_chart count_num_of_people
+= column_chart data_for_chart
 table.table.table-striped.mt-5
   thead
     tr
@@ -10,7 +10,7 @@ table.table.table-striped.mt-5
   tbody
     - sum = 0
     - count = 0
-    - count_num_of_people.each do |key, value|
+    - data_for_chart.each do |key, value|
       tr
         th scope="row"
           = key
